--- a/index.html
+++ b/index.html
@@ -90,3 +90,8 @@
     <div class="item-3 aside">Aside</div>
     <div class="item-4 footer">Footer</div>
 </div>
+
+
+
+
+<a href=" " ><img src="https://via.placeholder.com/468x60?text=Visit+Blogging.com+Now/00000 " ></a>
