--- a/start.html
+++ b/start.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <title>CSS Grid Layout Examples</title>
 <style>
     .grid {
@@ -74,7 +75,7 @@
         to { width: 400px; }
     }
 </style>
-
+<body>
 <h1>CSS Grid Layout Examples</h1>
 
 <h2>Grid Definition</h2>
@@ -183,3 +184,5 @@
 </pre>
 
 <iframe src="launch.html"></iframe>
+</body>
+</html>
